[package]
name = "dc-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.38", features = ["cmake-build"] }
clap = { version = "4.0.*", features = ["derive"] }
tokio = { version = "1.48.*", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
strip = true
lto = true
